move to swaync with dracula look and volume slider. added hover effects for way bar notifications and volume to open swaync. removed some alts and all tool tips for way bar.

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,7 +47,8 @@ $menu = pgrep wofi >/dev/null 2>&1 && pkill wofi || wofi --show drun
 # exec-once = nm-applet &
 exec-once = waybar
 exec-once = hyprpaper
-exec-once = dunst
+exec-once = swaync
+exec-once = wl-clip-persist --clipboard regular
 
 
 #############################
@@ -278,8 +279,8 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
-bind = , Print, exec, if area=$(slurp); then grim -g "$area" - | tee >(wl-copy) > $HOME/Pictures/Screenshots/Screenshot-$(date +%F_%T).png && dunstify "Screenshot of the region taken" -t 1000; fi
-bind = SHIFT, Print, exec, grim - | wl-copy && wl-paste > $HOME/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | dunstify "Screenshot of whole screen taken" -t 1000 # screenshot of the whole screen
+bind = , Print, exec, if area=$(slurp); then grim -g "$area" - | tee >(wl-copy) > $HOME/Pictures/Screenshots/Screenshot-$(date +%F_%T).png && notify-send "Screenshot of the region taken" -t 1000; fi
+bind = SHIFT, Print, exec, grim - | wl-copy && wl-paste > $HOME/Pictures/Screenshots/Screenshot-$(date +%F_%T).png | notify-send "Screenshot of whole screen taken" -t 1000 # screenshot of the whole screen
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
