brought back disconnection warning for network on waybar

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -192,7 +192,7 @@
         "tooltip": false
         // "tooltip-format": "{ifname} via {gwaddr} ",
         // "format-linked": "{ifname} (No IP) ",
-        // "format-disconnected": "Disconnected ⚠",
+        "format-disconnected": "Disconnected ⚠",
         // "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
