--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,6 +49,7 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = swaync
 exec-once = wl-clip-persist --clipboard regular
+exec-once = [workspace special] $terminal
 
 
 #############################
