scratchpad by default will load terminal

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,7 +49,6 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = swaync
 exec-once = wl-clip-persist --clipboard regular
-exec-once = [workspace special] $terminal
 
 
 #############################
@@ -273,8 +272,10 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
+workspace = special:magic, on-created-empty:$terminal
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
