--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -192,7 +192,7 @@
         "tooltip": false,
         // "tooltip-format": "{ifname} via {gwaddr} ",
         // "format-linked": "{ifname} (No IP) ",
-        "format-disconnected": "Disconnected ⚠"
+        "format-disconnected": "Disconnected ⚠",
         // "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
     "pulseaudio": {
@@ -205,8 +205,8 @@
         "format-source-muted": "",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "hands-free": "󰎇",
+            "headset": "󰋎",
             "phone": "",
             "portable": "",
             "car": "",
