--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -240,6 +240,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, O, exec, obs-cli recording toggle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
