--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,7 +49,8 @@ exec-once = waybar
 exec-once = hyprpaper
 exec-once = swaync
 exec-once = wl-clip-persist --clipboard regular
-
+exec-once = ~/.config/tmux/import_env
+exec-once = ~/.config/hypr/openwindow.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -189,7 +190,7 @@ master {
 misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-    initial_workspace_tracking = 0
+    initial_workspace_tracking = 1
 }
 
 
@@ -233,7 +234,7 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+# bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
@@ -277,7 +278,6 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 workspace = special:magic, on-created-empty:$terminal
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
