tmux fix(display popup shortcut)

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-bind-key p run-shell '$HOME/.local/bin/.tmux-popup'
+bind-key p display-popup -w 90% -h 90% -x C -y C
 set -as terminal-features 'xterm*:extkeys'
 set -g allow-passthrough on
 
