tmux feat(popup-toggle) can now toggle tmux pop-up window

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,11 @@
-bind-key p display-popup -w 90% -h 90% -x C -y C
+# unbind p # display-popup -w 90% -h 90% -x C -y C
+bind-key p run "#{@popup-toggle} -w90% -h90% -Ed'##{pane_current_path}'"
+# Load configurations specific for popup servers
+if -F '#{TMUX_POPUP_SERVER}' {
+    unbind-key p
+    bind-key p detach-client
+}
+
 set -as terminal-features 'xterm*:extkeys'
 set -g allow-passthrough on
 
@@ -27,6 +34,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'loichyan/tmux-toggle-popup'
 # Dracula Theme setup
 set -g @plugin 'DefectiveDev/Dracula-Theme-Edit-for-Tmux'
 set -g @dracula-plugins "git time"
