--- a/.config/nvim/.envrc
+++ b/.config/nvim/.envrc
@@ -1,1 +1,1 @@
-use flake github:DefectiveDev/nix-dev-environments/fbbc25ca7d3d53678d85f6e3bf7250a2aea051fd?neovim
+use flake "github:DefectiveDev/nix-dev-environments/fbbc25ca7d3d53678d85f6e3bf7250a2aea051fd?dir=neovim"
