tmux feat(shift enter) can now pass shift enter key through tmux

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,8 @@ if -F '#{TMUX_POPUP_SERVER}' {
     bind-key p detach-client
 }
 
+bind -n S-Enter send-keys "^[[13;2u"
+
 set -as terminal-features 'xterm*:extkeys'
 set -g allow-passthrough on
 
