tmux/nvim fix!(shift enter) fixed kitty terminal not being able to pass shift enter

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,8 +6,7 @@ if -F '#{TMUX_POPUP_SERVER}' {
     bind-key p detach-client
 }
 
-bind -n S-Enter send-keys "^[[13;2u"
-
+set -s extended-keys on
 set -as terminal-features 'xterm*:extkeys'
 set -g allow-passthrough on
 
